Bug 134914 - UI: Pressing reset after checking Relative shows wrong table size (0cm)
Summary: UI: Pressing reset after checking Relative shows wrong table size (0cm)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2020-07-17 21:36 UTC by Telesto
Modified: 2020-08-06 10:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-07-17 21:36:45 UTC
Description:
Pressing reset after checking Relative shows wrong table size (0cm)

Steps to Reproduce:
1. Open the attached file
2. Table -> Properties -> Table tab
3. Check relative
4. Press Reset -> with 0,18 cm
5. Press Reset again -> Proper results

Actual Results:
Wrong results pressing Reset once

Expected Results:
Proper result after pressing reset once


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: d851a02df57ab378ed0cc6d9362516de09c3279c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-07-17 21:36:54 UTC
Also in
3.3.0
Comment 2 Xisco Faulí 2020-08-03 16:20:54 UTC
no attached file
Comment 3 Telesto 2020-08-03 18:13:32 UTC
1. Open attachment 163229 [details]
2. Table -> Properties -> Table tab
3. Check relative
4. Press Reset -> with 0,18 cm
5. Press Reset again -> Proper results
Comment 4 Telesto 2020-08-05 07:28:42 UTC
@Caolan
As are already looking into they table dialog code, you might be interested in this

Or your work in progress solves this too...
Comment 5 Caolán McNamara 2020-08-05 13:53:17 UTC
I think the problem is that the legal range was modified when relative is clicked and on reset the orig value is set, but its outside the legal range, later the range is set to the new legal range but its too late and the value wasn't allowed
Comment 6 Commit Notification 2020-08-05 19:44:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e385eed90f797fc915a74f51d7f8c846b80e20fa

tdf#134914 reset table width/left/right range to initial conditions

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.