tdf#134914 reset table width/left/right range to initial conditions

so the reset buttons can restore back to the dialogs starting position

Change-Id: I7af1db23d1080e0f57a2ac1db54aca7d56c426f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100174
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>